[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Sergey Lebedev <ob430y@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
requests = "^2.28.2"
fake-useragent = "^1.1.3"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
